--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
+    "element-ui": "^2.14.1",
     "mockjs": "^1.1.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
